--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "file-loader": "^0.9.0",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "function-bind": "^1.0.2",
+    "gulp": "^3.9.1",
     "html-webpack-plugin": "^2.8.1",
     "http-proxy-middleware": "^0.17.2",
     "json-loader": "^0.5.4",
